Fixing footer alignment

--- a/assets/css/mission-atletica.css
+++ b/assets/css/mission-atletica.css
@@ -205,3 +205,10 @@ ul.social li {
 .right-col {
 	float:right;
 }
+.left-footer {
+	padding:0;
+	margin:0;
+}
+.left-footer li {
+	float:none;
+}
